--- a/week4/server/package.json
+++ b/week4/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.7.1",
+    "nodemailer": "^6.9.9",
     "sequelize": "^6.35.2",
     "uuid": "^9.0.1"
   }
